fix(build): add `vim-eof-comment` to `lint` rule
Signed-off-by: Guennadi Maximov C <g.maxc.fox@protonmail.com>

--- a/.github/workflows/flake8-lint.yml
+++ b/.github/workflows/flake8-lint.yml
@@ -38,3 +38,5 @@ jobs:
           path: "update_version"
           plugins: "flake8-pyi"
           exclude: ".tox,.git,*staticfiles*,build,locale,docs,tools,venv,.venv,*migrations*,*.pyc,*.pyi,__pycache__,test_*.py"
+
+# vim: set ts=2 sts=2 sw=2 et ai si sta:
