ci: fix `vim-eof-comment` usage
Signed-off-by: Guennadi Maximov C <g.maxc.fox@protonmail.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,5 +25,11 @@ repos:
         files: ^(update_version/.*\.pyi?|Makefile)$
         entry: make lint
         verbose: true
+      - id: vim_eof_comment
+        name: Run vim-eof-comment
+        language: system
+        files: ^(update_version/.*\.pyi?|Makefile)$
+        entry: make vim-eof-comment
+        verbose: true
 
 # vim: set ts=2 sts=2 sw=2 et ai si sta:
