--- a/.github/workflows/mypy-lint.yml
+++ b/.github/workflows/mypy-lint.yml
@@ -28,7 +28,7 @@ jobs:
           architecture: x64
       - name: Install mypy
         run: |
-          pip install -U mypy mypy-extensions typing typing-extensions
+          pip install -U mypy mypy-extensions
       - name: Run mypy
         uses: sasanquaneuf/mypy-github-action@main
         with:
