chore: bump version to `0.1.5`

--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,7 @@ pre-commit = "*"
 numpydoc = "*"
 pip = "*"
 vim-eof-comment = "*"
+python-lsp-server = {extras = ["all"], version = "*"}
 
 [scripts]
 lint = "flake8 --statistics --show-source --color always --max-line-length 100 --docstring-convention numpy --ignore=D401 ."
