--- a/.github/workflows/vim-eof-comment.yml
+++ b/.github/workflows/vim-eof-comment.yml
@@ -1,4 +1,3 @@
-# GitHub Actions example
 name: Run vim-eof-comment
 on:
   push:
@@ -35,3 +34,5 @@ jobs:
           commit_message: "chore: format files with `vim-eof-comment`"
           commit_options: "--signoff"
           branch: ${{ github.head_ref }}
+
+# vim: set ts=2 sts=2 sw=2 et ai si sta:
